[COLOR="DeepSkyBlue"]2.4.4 (25)[/COLOR]:
[LIST]
[*] Set up the character default settings to the same as the account-wide default settings.
[*] Add in minimum version checking for UnknownTracker.
[*] Removed version checking for a library that we don't even use.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.3 (24)[/COLOR]:
[LIST]
[*] Add in predefined rules for UnknownTracker integration plugin.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.2 (23)[/COLOR]:
[LIST]
[*] Remove annoying debug printout.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.1 (22)[/COLOR]:
[LIST]
[*] Fix problem with isunknown() returning false where none of the toons knew the item.
[*] Fix addon version.
[/LIST]

[COLOR="DeepSkyBlue"]2.4 (21)[/COLOR]:
COLOR="MediumSlateBlue"]Enhancement[/COLOR]
[LIST]
[*] Now integrated with the Unknown Tracker Addon to allow you to write rules about if a recipe, motif, style page, furnishing recipes, or runeboxes are unknown to your character(s). [I] Requires version 0.63 of the addon "Unknown Tracker" to be installed for this to work. [/I] (Thanks to kadeer for modifications to "Unknown Tracker" to allow this to work!)
[*] New function [COLOR="MediumSeaGreen"]isunknown()[/COLOR] with zero or more strings to match knowledge of the recipe to the named characters (names are case sensitive). If you use [COLOR="MediumSeaGreen"]isunknown()[/COLOR] without any parameters, it will return true if the learnable item (recipe, etc) is unknown to ANY of your toons. If you use [COLOR="MediumSeaGreen"]isunknown("me")[/COLOR] with the special parameter "me" then it will return true if the learnable item is unknown to the toon that you are currently logged in on. Finally you can specify specific toon names as parameters so you can tell if the learnable item is unknown to your specific "crafter" toons. (Note that the options for Unknown Tracker to turn off displaying for specific types of items will also turn off AutoCategory's ability to detect them with this rule.)