@@ -1,0 +1,199 @@
+-- All the texts that need a translation. As this is being used as the
+-- default (fallback) language, all strings that the addon uses MUST
+-- be defined here.
+
+--base language is english, so the file en.lua shuld be kept empty!
+AutoCategory_localization_strings = AutoCategory_localization_strings  or {}
+
+AutoCategory_localization_strings["ru"] = {
+    SI_AC_BAGTYPE_SHOWNAME_BACKPACK = "Инвентарь",
+    SI_AC_BAGTYPE_SHOWNAME_BANK = "Банк",
+    SI_AC_BAGTYPE_SHOWNAME_GUILDBANK = "Гильдейский банк",
+    SI_AC_BAGTYPE_SHOWNAME_CRAFTBAG = "Ремесленная сумка",
+    SI_AC_BAGTYPE_SHOWNAME_CRAFTSTATION = "Ремесленная станция",
+    SI_AC_BAGTYPE_SHOWNAME_HOUSEBANK = "Домашнее хранилище",
+    SI_AC_BAGTYPE_TOOLTIP_BACKPACK = "Инвентарь",
+    SI_AC_BAGTYPE_TOOLTIP_BANK = "Банк",
+    SI_AC_BAGTYPE_TOOLTIP_GUILDBANK = "Гильдейский банк",
+    SI_AC_BAGTYPE_TOOLTIP_CRAFTBAG = "Ремесленная сумка",
+    SI_AC_BAGTYPE_TOOLTIP_CRAFTSTATION = "Destruct/Improvement in Craft Station", 
+    SI_AC_BAGTYPE_TOOLTIP_HOUSEBANK = "Домашнее хранилище", 
+
+    SI_AC_ALIGNMENT_LEFT = "Слева",
+    SI_AC_ALIGNMENT_CENTER = "По центру",
+    SI_AC_ALIGNMENT_RIGHT = "Справа",
+
+    SI_AC_DEFAULT_NAME_EMPTY_TAG = "<Пусто>",
+    SI_AC_DEFAULT_NAME_CATEGORY_OTHER = "Прочее",
+    SI_AC_DEFAULT_NAME_NEW_CATEGORY = "Нов. категория",
+
+    SI_AC_WARNING_CATEGORY_MISSING = "This category is missing, please make sure the category with this name exist.",
+    SI_AC_WARNING_CATEGORY_NAME_EMPTY = "Название категории не может быть пустым.",
+    SI_AC_WARNING_CATEGORY_NAME_DUPLICATED = "Название '%s' уже используется, попробуйте '%s'.",
+    SI_AC_WARNING_NEED_RELOAD_UI = "Нужно перезагрузить UI",
+
+    SI_AC_MENU_BS_CHECKBOX_ACCOUNT_WIDE_SETTING = "Настройки на аккаунт",
+    SI_AC_MENU_BS_CHECKBOX_ACCOUNT_WIDE_SETTING_TOOLTIP = "Use account-wide setting instead of character setting",
+
+    SI_AC_MENU_SUBMENU_BAG_SETTING = "|c0066FF[Настройки сумки]|r",
+    SI_AC_MENU_BS_DROPDOWN_BAG = "Сумка",
+    SI_AC_MENU_BS_DROPDOWN_BAG_TOOLTIP = "Select a bag to modify categories that are being used",
+    SI_AC_MENU_BS_CHECKBOX_UNGROUPED_CATEGORY_HIDDEN = "Скрыть предметы без группы",
+    SI_AC_MENU_BS_CHECKBOX_UNGROUPED_CATEGORY_HIDDEN_TOOLTIP = "Check this will hide your ungrouped items, you cannot find them in current bag setting!",
+
+    SI_AC_MENU_BS_DROPDOWN_CATEGORIES = "Категории",
+    SI_AC_MENU_BS_SLIDER_CATEGORY_PRIORITY = "Приоритет",
+    SI_AC_MENU_BS_SLIDER_CATEGORY_PRIORITY_TOOLTIP = "Priority determines the order of the category in the bag, higher means more ahead position.",
+    SI_AC_MENU_BS_BUTTON_EDIT = "Изменить категорию",
+    SI_AC_MENU_BS_BUTTON_EDIT_TOOLTIP = "Edit selected category in the category setting.",
+    SI_AC_MENU_BS_BUTTON_REMOVE = "Убрать из сумки",
+    SI_AC_MENU_BS_BUTTON_REMOVE_TOOLTIP = "Remove selected category from bag",
+
+    SI_AC_MENU_BS_CHECKBOX_CATEGORY_HIDDEN = "Скрыть категорию",
+    SI_AC_MENU_BS_CHECKBOX_CATEGORY_HIDDEN_TOOLTIP = "Selected category and all items within the category will not appear in your bag if checked.",
+
+    SI_AC_MENU_HEADER_ADD_CATEGORY = "Добавить категорию",
+    SI_AC_MENU_AC_DROPDOWN_TAG = "Тег",
+    SI_AC_MENU_AC_DROPDOWN_CATEGORY = "Категория",
+    SI_AC_MENU_AC_BUTTON_EDIT = "Изменить категорию",
+    SI_AC_MENU_AC_BUTTON_EDIT_TOOLTIP = "Edit selected category in the category setting.",
+    SI_AC_MENU_AC_BUTTON_ADD = "Добавить в сумку",
+    SI_AC_MENU_AC_BUTTON_ADD_TOOLTIP = "Add selected category to the bag",
+    SI_AC_MENU_AC_BUTTON_NEED_HELP = "Нужна помощь?",
+
+    SI_AC_MENU_HEADER_IMPORT_BAG_SETTING = "Импорт настроек сумки",
+    SI_AC_MENU_IBS_DROPDOWN_IMPORT_FROM_BAG = "Импорт из сумки",
+    SI_AC_MENU_IBS_DROPDOWN_IMPORT_FROM_BAG_TOOLTIP = "Select a bag setting to import from.",
+    SI_AC_MENU_IBS_BUTTON_IMPORT = "Импорт",
+    SI_AC_MENU_IBS_BUTTON_IMPORT_TOOLTIP = "Import will overwrite current bag setting.",
+
+    SI_AC_MENU_HEADER_UNIFY_BAG_SETTINGS = "Унифицировать все натсройки сумки",
+    SI_AC_MENU_UBS_BUTTON_EXPORT_TO_ALL_BAGS = "Экспорт во все сумки",
+    SI_AC_MENU_UBS_BUTTON_EXPORT_TO_ALL_BAGS_TOOLTIP = "Will replace all the bag settings with current bag setting!",
+
+    SI_AC_MENU_SUBMENU_CATEGORY_SETTING = "|c0066FF[Настройка категории]|r",
+    SI_AC_MENU_CS_DROPDOWN_TAG = "Тег",
+    SI_AC_MENU_CS_DROPDOWN_TAG_TOOLTIP = "Tag the category and make them organized.",
+    SI_AC_MENU_CS_DROPDOWN_CATEGORY = "Категория",
+
+    SI_AC_MENU_HEADER_EDIT_CATEGORY = "Изменить категорию",
+    SI_AC_MENU_EC_EDITBOX_NAME = "Название",
+    SI_AC_MENU_EC_EDITBOX_NAME_TOOLTIP = "Name cannot be duplicated.",
+    SI_AC_MENU_EC_EDITBOX_TAG = "Тег",
+    SI_AC_MENU_EC_EDITBOX_TAG_TOOLTIP = "The category is visible only when you select its tag. <Empty> will be applied if leave the tag blank.",
+    SI_AC_MENU_EC_EDITBOX_DESCRIPTION = "Описание",
+    SI_AC_MENU_EC_EDITBOX_DESCRIPTION_TOOLTIP = "To describe what is the category used for.",
+    SI_AC_MENU_EC_EDITBOX_RULE = "Правило",
+    SI_AC_MENU_EC_EDITBOX_RULE_TOOLTIP = "Rules will be applied to bags to categorize items",
+    SI_AC_MENU_EC_BUTTON_LEARN_RULES = "Изучить правила",
+    SI_AC_MENU_EC_BUTTON_LEARN_RULES_TOOLTIP = "Open on-line rule Help URL",
+    SI_AC_MENU_EC_BUTTON_NEW_CATEGORY = "Новое",
+    SI_AC_MENU_EC_BUTTON_NEW_CATEGORY_TOOLTIP = "Create a new category with selected tag",
+    SI_AC_MENU_EC_BUTTON_CHECK_RULE = "Проверить",
+    SI_AC_MENU_EC_BUTTON_CHECK_RESULT_GOOD = "|c2DC50EХорошо|r",
+    SI_AC_MENU_EC_BUTTON_CHECK_RESULT_ERROR = "|cFF0000Ошибка в правиле|r",
+    SI_AC_MENU_EC_BUTTON_CHECK_RESULT_WARNING = "|cEECA00Warning - Unrecognized:|r",
+    SI_AC_MENU_EC_BUTTON_CHECK_RULE_TOOLTIP = "Check if the rule has errors",
+    SI_AC_MENU_EC_BUTTON_COPY_CATEGORY = "Копировать",
+    SI_AC_MENU_EC_BUTTON_COPY_CATEGORY_TOOLTIP = "Make a new copy of selected category",
+    SI_AC_MENU_EC_BUTTON_DELETE_CATEGORY = "Удалить",
+    SI_AC_MENU_EC_BUTTON_DELETE_CATEGORY_TOOLTIP = "Delete selected category",
+
+    SI_AC_MENU_SUBMENU_APPEARANCE_SETTING = "|c0066FF[Настройка внешнего вида]|r",
+    SI_AC_MENU_AS_DESCRIPTION_REFRESH_TIP = "Change the header text's appearance. Do not need to reload ui, you can just swap tabs to refresh them. *ONLY work in keyboard mode*",
+    SI_AC_MENU_EC_DROPDOWN_CATEGORY_TEXT_FONT = "Шрифт текста категорий",
+    SI_AC_MENU_EC_DROPDOWN_CATEGORY_TEXT_STYLE = "Стиль текста категорий",
+    SI_AC_MENU_EC_DROPDOWN_CATEGORY_TEXT_ALIGNMENT = "Выравнивание текста категорий",
+    SI_AC_MENU_EC_DROPDOWN_CATEGORY_TEXT_COLOR = "Цвет текста категорий",
+    SI_AC_MENU_EC_DROPDOWN_CATEGORY_TEXT_FONT_SIZE = "Размер шрифта категорий",
+    SI_AC_MENU_EC_EDITBOX_CATEGORY_UNGROUPED_TITLE = "Название категории без группы",
+    SI_AC_MENU_EC_EDITBOX_CATEGORY_UNGROUPED_TITLE_TOOLTIP = "If no category is matched, the item will be put in this category.",
+    SI_AC_MENU_EC_SLIDER_CATEGORY_HEADER_HEIGHT = "Высота заголовка категорий",
+    SI_AC_MENU_EC_BUTTON_RELOAD_UI = "Перезагрузить UI",
+
+    SI_AC_MENU_SUBMENU_GENERAL_SETTING = "|c0066FF[Основные настройки]|r",
+    SI_AC_MENU_GS_CHECKBOX_SHOW_MESSAGE_WHEN_TOGGLE = "Show Message When Toggle",
+    SI_AC_MENU_GS_CHECKBOX_SHOW_MESSAGE_WHEN_TOGGLE_TOOLTIP = "Will show a message in chat when toggling this add-on.",
+    SI_AC_MENU_GS_CHECKBOX_SHOW_CATEGORY_ITEM_COUNT = "Show Category Items Count",
+    SI_AC_MENU_GS_CHECKBOX_SHOW_CATEGORY_ITEM_COUNT_TOOLTIP = "Add a number to show how many items in the category after the category's name", 
+    SI_AC_MENU_GS_CHECKBOX_SAVE_CATEGORY_COLLAPSE_STATUS = "Save Category Collapse Status",
+    SI_AC_MENU_GS_CHECKBOX_SAVE_CATEGORY_COLLAPSE_STATUS_TOOLTIP = "Will keep the categories collapsed/expanded as they are after quit/log out.",
+
+    SI_AC_MENU_SUBMENU_IMPORT_EXPORT = "|c0066FF[Импорт & Экспорт]|r",
+    SI_AC_MENU_HEADER_ACCOUNT_WIDE_SETTING = "Настройки на аккаунт",
+
+
+    SI_AC_DEFAULT_TAG_GEARS= "Снаряжение",
+    SI_AC_DEFAULT_TAG_GENERAL_ITEMS= "Основные предметы",
+    SI_AC_DEFAULT_TAG_MATERIALS= "Материалы",
+
+    SI_AC_DEFAULT_CATEGORY_ARMOR= "Броня",
+    SI_AC_DEFAULT_CATEGORY_BOE= "Привязывается",
+    SI_AC_DEFAULT_CATEGORY_BOE_DESC= "BoE gears for selling",
+    SI_AC_DEFAULT_CATEGORY_BOP_TRADEABLE= "Привязывается (таймер",
+    SI_AC_DEFAULT_CATEGORY_BOP_TRADEABLE_DESC= "Gears are tradeable within a limited time",
+    SI_AC_DEFAULT_CATEGORY_DECONSTRUCT= "Деконструкция",
+    SI_AC_DEFAULT_CATEGORY_DECONSTRUCT_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_EQUIPPING= "Надето",
+    SI_AC_DEFAULT_CATEGORY_EQUIPPING_DESC= "Currently equipping gears (Gamepad Only)",
+    SI_AC_DEFAULT_CATEGORY_LOW_LEVEL= "Низкий уровень",
+    SI_AC_DEFAULT_CATEGORY_LOW_LEVEL_DESC= "Gears below cp 160",
+    SI_AC_DEFAULT_CATEGORY_NECKLACE= "Шея",
+    SI_AC_DEFAULT_CATEGORY_NECKLACE_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_RESEARCHABLE= "Изучить",
+    SI_AC_DEFAULT_CATEGORY_RESEARCHABLE_DESC= "Gears that keep for research purpose, only keep the low quality, low level one.",
+    SI_AC_DEFAULT_CATEGORY_RING= "Кольцо",
+    SI_AC_DEFAULT_CATEGORY_RING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_SET= "Комплект",
+    SI_AC_DEFAULT_CATEGORY_SET_DESC= "Auto categorize set gears",
+    SI_AC_DEFAULT_CATEGORY_WEAPON= "Оружие",
+    SI_AC_DEFAULT_CATEGORY_WEAPON_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_CONSUMABLES= "Расх. предметы",
+    SI_AC_DEFAULT_CATEGORY_CONSUMABLES_DESC= "Еда, Выпивка, Зелья",
+    SI_AC_DEFAULT_CATEGORY_CONTAINER= "Контейнер",
+    SI_AC_DEFAULT_CATEGORY_CONTAINER_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_FURNISHING= "Обстановка",
+    SI_AC_DEFAULT_CATEGORY_FURNISHING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_GLYPHS_AND_GEMS= "Глифы & Камни",
+    SI_AC_DEFAULT_CATEGORY_GLYPHS_AND_GEMS_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_NEW= "Новое",
+    SI_AC_DEFAULT_CATEGORY_NEW_DESC= "Items that are received recently",
+    SI_AC_DEFAULT_CATEGORY_POISON= "Яды",
+    SI_AC_DEFAULT_CATEGORY_POISON_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_QUICKSLOTS= "Быстрый доступ",
+    SI_AC_DEFAULT_CATEGORY_QUICKSLOTS_DESC= "Equipped in quickslots",
+    SI_AC_DEFAULT_CATEGORY_RECIPES_AND_MOTIFS= "Рецепты & Мотивы",
+    SI_AC_DEFAULT_CATEGORY_RECIPES_AND_MOTIFS_DESC= "All recipes, motifs and recipe fragments.",
+    SI_AC_DEFAULT_CATEGORY_SELLING= "Продажа",
+    SI_AC_DEFAULT_CATEGORY_SELLING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_STOLEN= "Украдено",
+    SI_AC_DEFAULT_CATEGORY_STOLEN_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_TREASURE_MAPS= "Карты & Исследования",
+    SI_AC_DEFAULT_CATEGORY_TREASURE_MAPS_DESC= "Treasure maps and survey reports",
+    SI_AC_DEFAULT_CATEGORY_ALCHEMY= "Алхимия",
+    SI_AC_DEFAULT_CATEGORY_ALCHEMY_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_BLACKSMITHING= "Кузнечное дело",
+    SI_AC_DEFAULT_CATEGORY_BLACKSMITHING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_CLOTHING= "Портяжное дело",
+    SI_AC_DEFAULT_CATEGORY_CLOTHING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_ENCHANTING= "Зачарование",
+    SI_AC_DEFAULT_CATEGORY_ENCHANTING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_JEWELRYCRAFTING= "Ювелирное дело",
+    SI_AC_DEFAULT_CATEGORY_JEWELRYCRAFTING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_PROVISIONING= "Снабжение",
+    SI_AC_DEFAULT_CATEGORY_PROVISIONING_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_TRAIT_OR_STYLE_GEMS= "Камни особенностей/стилей",
+    SI_AC_DEFAULT_CATEGORY_TRAIT_OR_STYLE_GEMS_DESC= "",
+    SI_AC_DEFAULT_CATEGORY_WOODWORKING= "Столярнрое дело",
+    SI_AC_DEFAULT_CATEGORY_WOODWORKING_DESC= "",
+
+    SI_BINDING_NAME_TOGGLE_AUTO_CATEGORY= "Переключить Auto Category",
+    SI_MESSAGE_TOGGLE_AUTO_CATEGORY_ON="Auto Category: ВКЛ",
+    SI_MESSAGE_TOGGLE_AUTO_CATEGORY_OFF="Auto Category: ВЫКЛ",
+    SI_CONTEXT_MENU_EXPAND = "Развернуть",
+    SI_CONTEXT_MENU_COLLAPSE = "Свернуть",
+    SI_CONTEXT_MENU_EXPAND_ALL = "Развернуть все",
+    SI_CONTEXT_MENU_COLLAPSE_ALL = "Свернуть все",
+}
+
+
