@@ -1,3 +1,8 @@
+[COLOR="DeepSkyBlue"]2.4.5 (26)[/COLOR]:
+[LIST]
+[*] Added Russian language strings courtesy of Ckau.
+[/LIST]
+
 [COLOR="DeepSkyBlue"]2.4.4 (25)[/COLOR]:
 [LIST]
 [*] Set up the character default settings to the same as the account-wide default settings.
